--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,5 @@
 {
-  "recommendations": ["denoland.vscode-deno"  ,
+  "recommendations": [ 
   "charliermarsh.ruff",
   "editorconfig.editorconfig",
   "esbenp.prettier-vscode",
