--- a/.env
+++ b/.env
@@ -2,9 +2,21 @@
 #  Application variables
 ####################################################################
 
-# this contains the list of public RSA keys that the application uses to verify the JWT token 
+# OpenID configuration
+# ------------------------------------------------------------------
 OIDC_CONFIGURATION_URL=http://localhost:8024/realms/pymicroservice/.well-known/openid-configuration
-OIDC_AUDIENCE=account
+# OIDC_AUDIENCE=account
+
+# API Configuration
+# ------------------------------------------------------------------
+# API_ROUTE_PREFIX=/api/v1
+
+# LOGGER Configuration
+# ------------------------------------------------------------------
+# LOG_LEVEL=DEBUG
+# LOG_FORMAT=TODO
+# LOG_JSON=1 # 1 for true
+
 ####################################################################
 #  Docker compose variables
 ####################################################################
