--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,19 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "name": "py-microservice",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "uvicorn",
-            "cwd": "${workspaceFolder}",
-            "env": {
-                "PYTHONPATH": "${workspaceRoot}",
-                "PYTHONDONTWRITEBYTECODE": "1",
-            },
-            "args": [
-                "virtual_staff.launch:app",
-                "--reload",
-                "--workers",
-                "1",
-                "--port",
-                "8080"
-            ]
-        }
-    
+      {
+        "name": "Python: Uvicorn",
+        "type": "debugpy",
+        "request": "launch",
+        "module": "uvicorn",
+        "args": [
+          "myproject.application.bootstrap:Bootstrap.create_app",
+          "--host", "127.0.0.1",
+          "--port", "8000",
+          "--reload"
+        ],
+        "envFile": "${workspaceFolder}/.env",
+        "console": "integratedTerminal"
+      }
     ]
-}
+  }
