--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.12"
 dependencies = [
     "cryptography>=44.0.0",
     "fastapi[standard]>=0.115.6",
+    "gunicorn>=23.0.0",
     "loguru>=0.7.3",
     "pyjwt>=2.10.1",
     "requests>=2.32.3",
