--- a/.env
+++ b/.env
@@ -13,9 +13,9 @@ OIDC_CONFIGURATION_URL=http://localhost:8024/realms/pymicroservice/.well-known/o
 
 # LOGGER Configuration
 # ------------------------------------------------------------------
-# LOG_LEVEL=DEBUG
+# LOG_LEVEL=INFO
 # LOG_FORMAT=TODO
-# LOG_JSON=1 # 1 for true
+# LOG_JSON=0 # 1 for true
 
 ####################################################################
 #  Docker compose variables
