--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "fastapi[standard]>=0.115.6",
     "gunicorn>=23.0.0",
     "loguru>=0.7.3",
+    "pydantic-settings>=2.7.0",
     "pyjwt>=2.10.1",
     "requests>=2.32.3",
 ]
