--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,16 +27,10 @@
     "source.fixAll": "always"
   },
 
-  // Python testing
-  "python.testing.unittestArgs": [
-    "-v",
-    "-s",
-    "./tests",
-    "-p",
-    "*_test.py"
-  ],
-  "python.testing.pytestEnabled": false,
-  "python.testing.unittestEnabled": true,
+ 
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true,
+  "python.testing.autoTestDiscoverOnSaveEnabled": true,
 
   // Prettier settings
   "prettier.tabWidth": 2, // Consistent tab width for formatting
@@ -44,5 +38,8 @@
   "prettier.trailingComma": "all", // Enforce trailing commas
   "prettier.arrowParens": "always", // Enforce parentheses for arrow functions
   "prettier.printWidth": 120, // Enforce maximum line length
-  "prettier.endOfLine": "lf", // Normalize line endings
+  "prettier.endOfLine": "lf",
+  "python.testing.pytestArgs": [
+    "tests"
+  ], // Normalize line endings
 }
