--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 ####################################################################
 #  Application variables
 ####################################################################
+# GUNICORN_WORKERS=1
+# GUNICORN_PORT=8000
 
 # OpenID configuration
 # ------------------------------------------------------------------
@@ -14,8 +16,8 @@ OIDC_CONFIGURATION_URL=http://localhost:8024/realms/pymicroservice/.well-known/o
 # LOGGER Configuration
 # ------------------------------------------------------------------
 # LOG_LEVEL=INFO
+# LOG_JSON_OUTPUT=false
 # LOG_FORMAT=TODO
-# LOG_JSON=0 # 1 for true
 
 ####################################################################
 #  Docker compose variables
