--- a/.env.intregrated-test
+++ b/.env.intregrated-test
@@ -14,7 +14,7 @@ GUNICORN_PORT=8000
 # OpenID configuration
 # ------------------------------------------------------------------
 # OIDC security is available if OIDC_CONFIGURATION_URL is set
-OIDC_CONFIGURATION_URL=http://127.0.0.1:8024/realms/pymicroservice/.well-known/openid-configuration
+OIDC_CONFIGURATION_URL=http://keycloak.local:8080/realms/pymicroservice/.well-known/openid-configuration
 # Default : OIDC_AUDIENCE=account
 OIDC_AUDIENCE=account
 
@@ -29,8 +29,8 @@ API_ROUTE_PREFIX=/api/v1
 # Default : WORKER_BROKER_URL=redis://localhost:6379/0
 # Default : WORKER_RESULT_BACKEND=redis://localhost:6379
 
-CELERY_BROKER_URL=redis://localhost:6379/0
-CELERY_RESULT_BACKEND=redis://localhost:6379
+CELERY_BROKER_URL=redis://redis.local:6379/0
+CELERY_RESULT_BACKEND=redis://redis.local:6379
 
 # LOGGER Configuration
 # ------------------------------------------------------------------
@@ -39,13 +39,11 @@ CELERY_RESULT_BACKEND=redis://localhost:6379
 
 LOG_LEVEL=INFO
 LOG_JSON_OUTPUT=false
-
 ####################################################################
 #  TEST VARIABLES
 ####################################################################
 
-TEST_KEYCLOAK_URL=http://localhost:8024
-
+TEST_KEYCLOAK_URL=http://keycloak.local:8080
 ####################################################################
 #  Keycloak variables
 ####################################################################
