--- a/.env
+++ b/.env
@@ -26,8 +26,8 @@ API_ROUTE_PREFIX=/api/v1
 
 # WORKER Configuration
 # ------------------------------------------------------------------
-# Default : WORKER_BROKER_URL=redis://localhost:6379/0
-# Default : WORKER_RESULT_BACKEND=redis://localhost:6379
+# Default : CELERY_BROKER_URL=redis://localhost:6379/0
+# Default : CELERY_RESULT_BACKEND=redis://localhost:6379
 
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379
