--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,13 @@
 repos:
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.5.0
+    hooks:
+      # - id: trailing-whitespace
+      # - id: end-of-file-fixer
+      # - id: check-merge-conflict
+      # - id: check-yaml
+      - id: debug-statements # Vérifie les print() et pdb dans le code
+      - id: check-added-large-files
   # Ruff for Python formatting and linting
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: v0.7.0
@@ -7,24 +16,22 @@ repos:
         name: Ruff Linter
         args: ["--fix"] # Automatically fix issues
         files: \.py$
-        exclude: ^app/alembic/
         stages: [pre-commit]
       - id: ruff-format
         name: Ruff Formatter
         files: \.py$
-        exclude: ^app/alembic/
         stages: [pre-commit]
   # Mypy to check type annotations
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.0.1
+    rev: v1.14.1
     hooks:
       - id: mypy
-        name: Mypy Type Checker
-        args: ["--explicit-package-bases"]
-        additional_dependencies: [types-sqlalchemy, types-requests]
-        files: ^app/
-        exclude: ^app/alembic/
-        stages: [pre-commit]
+        args:
+          - "--explicit-package-bases"
+          - "--show-error-codes"
+          - "--ignore-missing-imports"
+          - "--config-file"
+          - "mypy.ini"
 
   - repo: local
     hooks:
