--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -5,5 +5,7 @@
   "esbenp.prettier-vscode",
   "dbaeumer.vscode-eslint",
   "ms-python.python",
-  "ms-python.vscode-pylance"]
+  "ms-python.vscode-pylance",
+  "ms-python.mypy-type-checker"
+]
 }
