--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,10 +2,12 @@ repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.5.0
     hooks:
-      # - id: trailing-whitespace
-      # - id: end-of-file-fixer
-      # - id: check-merge-conflict
-      # - id: check-yaml
+      - id: check-case-conflict
+      - id: end-of-file-fixer
+      - id: check-merge-conflict
+      - id: check-toml
+      - id: check-json
+      - id: check-yaml
       - id: debug-statements # Vérifie les print() et pdb dans le code
       - id: check-added-large-files
   # Ruff for Python formatting and linting
